<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ImportBtn"
            android:layout_width="60dp"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_press_pop"
            android:drawableRight="@drawable/btn_check_buttonless_off"
            android:paddingRight="5dp"
            android:text="@string/get_carkey"
            android:textColor="#2BA3DA"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@drawable/listview_divider" />

        <Button
            android:id="@+id/discardButton"
            android:layout_width="60dp"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/btn_press_pop"
            android:drawableRight="@drawable/btn_check_buttonless_off"
            android:paddingRight="5dp"
            android:text="@string/back_carkey"
            android:textColor="#2BA3DA"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffffff"
        android:orientation="horizontal" >
    </LinearLayout>

    <Button
        android:id="@+id/btn_arrived_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_center"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_work_type"
        android:drawableRight="@drawable/btn_check_buttonless_off"
        android:paddingRight="10dp"
        android:text="@string/arrived_at" />

    <Button
        android:id="@+id/btn_start_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_arrived_at"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_work_type"
        android:drawableRight="@drawable/btn_check_buttonless_off"
        android:paddingRight="10dp"
        android:text="@string/start_off" />

    <Button
        android:id="@+id/btn_get_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_work_type"
        android:drawableRight="@drawable/btn_check_buttonless_off"
        android:paddingRight="10dp"
        android:text="@string/get_back" />

    <Button
        android:id="@+id/btn_end_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_get_back"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_work_type"
        android:drawableRight="@drawable/btn_check_buttonless_off"
        android:paddingRight="10dp"
        android:text="@string/end_off" />

</RelativeLayout>