<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res/com.robert.maps">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_view_min_heght"
        android:background="#2f2f2f" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@drawable/common_tab_bg" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/mm_title_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/work_design_task"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/ImportBtn"
            android:layout_width="60dp"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_press_pop"
            android:text="@string/Import"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="#2BA3DA"
            android:textStyle="bold" />
        
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/work_design"
                        android:textColor="@color/text_selected"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/ck_task_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:button="@drawable/checked_box"
                        android:gravity="center" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#d0ccc7" />

                <LinearLayout
                    android:id="@+id/ll_task_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/update_time"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_task_updata"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_gray"
                            android:textSize="14sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="#d0ccc7" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:gravity="center_vertical" >

                        <TextView
                            android:id="@+id/tv_online_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/design_total"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_task_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_gray"
                            android:textSize="14sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_task_progress"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:visibility="gone" >

                    <com.mtkj.cnpc.view.numberprogressbar.NumberProgressBar
                        android:id="@+id/npb_task_update"
                        style="@style/NumberProgressBar_Relax_Blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/task_list"
                        android:textColor="@color/light_gray" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical" >
                    
                    <include layout="@layout/listitem_dailytask"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="#d0ccc7" />

                    <com.mtkj.cnpc.view.swipemenulistview.SwipeMenuListView
                        android:id="@+id/lv_task_daliy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cacheColorHint="#00000000"
                        android:scrollbars="none" >
                    </com.mtkj.cnpc.view.swipemenulistview.SwipeMenuListView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>