<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background" >

    <include
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_getcarkey_carnum"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/press_tyle"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/plate_number"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_getcarkey_carnum"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="3"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/host_bottom_text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_right_row_gray_2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/back_text"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_getcarkey_driver"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/driver"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_getcarkey_driver"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="3"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/host_bottom_text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_right_row_gray_2"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/back_text"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_getcarkey_time"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/press_tyle"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/departure_time"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_getcarkey_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="3"
                        android:gravity="right|center_vertical"
                        android:text=""
                        android:textColor="@color/host_bottom_text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_right_row_gray_2"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_getcarkey_ok"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#2DB6ED"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>